[package]
name = "docker-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features=false}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1.6"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
futures-util = "0.3.30"
pretty_env_logger = "0.5.0"
docker-api = "0.14.0"
